# respecter

./: .gitignore  NOTICE  README.md  TODO.md  config.yaml  example.py  justfile  output.html  pyproject.toml  requirements.txt  sparql_query_builder.py  sparql_query_file.sparql
config/: sparql_config.yaml
data/: Sparql Query.sparql  data.jsonld  data.ttl  prop_result.json  respec-ontology-shapes.ttl  result.json  sparql_query.sparql  sparql_query_classes.sparql  sparql_query_concepts.sparql  sparql_query_node_shapes.sparql  sparql_query_properties.sparql  sparql_query_property_shapes.sparql
examples/: ImagingOntology.ttl  custodian-original.ttl  custodian.html  custodian.ttl  imaging.ttl  sparql_config_imaging.yaml
examples/custodian/: config.yaml  custodian.html  custodian.ttl
examples/imaging/: sparql_config_imaging.yaml
respecter/: cli.py  core.py  helpers.py  main.py  models.py  sparql.py
sparql/: sparql_query_enumerations.sparql
sparql_queries/: sparql_query_ontology.sparql
src/respecter/: __init__.py  cli.py  core.py  defaults.py  helpers.py  sparql.py
src/respecter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/respecter/data/: config.yaml  template.html
templates/: example.html
tests/: test_cli.py  test_core.py  test_helpers.py  test_sparql.py
tests/config/: sparql_config.yaml
tests/data/: languages.ttl
tests/sparql/: languages.sparql
