[project]
name = "respecter"
version = "0.1.0"
authors = [
  { name="Swiss Data Science Center", email="contact@datascience.ch" },
]
description = "Turn an RDF-serialized ontology into a ReSpec styled HTML page"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "Apache-2.0" }

dependencies = [
  "click==8.1.7",
  "importlib>=1.0.4",
  "isodate==0.6.1",
  "Jinja2==3.1.3",
  "markdown-it-py==3.0.0",
  "MarkupSafe==2.1.5",
  "mdurl==0.1.2",
  "Pygments==2.17.2",
  "pyparsing==3.1.1",
  "PyYAML==6.0.1",
  "rdflib==7.0.0",
  "rich==13.7.1",
  "shellingham==1.5.4",
  "six==1.16.0",
  "typer==0.12.3",
  "typing_extensions==4.11.0",
]

[project.urls]
Homepage = "https://github.com/sdsc-ordes/respecter"
Issues = "https://github.com/sdsc-ordes/respecter/issues"

[dependency-groups]
dev = [
  "ruff",
  "pre-commit",
]
test = [
    "pytest",
]

[project.scripts]
respecter = "respecter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "respecter/data/**/*",
]